      - Fixed Variant#equals(), VariantInfo#equals(), 
        AnnotationInfo#equals().
      - Removed duplicate representations in WADL description and
        representation with abstract media types.
      - ServerResource#updateAllowedMethods() now clears the response
        property before updating it. Caused troubles with the
        WadlApplication discovery logic.
    - Misc
      - Component#main() now accepts related XML configuration file 
        paths. Contributed by Alex Milowski.
      - Updated jSSLutils to version 1.0.5.
      - Clarified Javadocs of the WADL extension.
      - Reduced max threads default value from "255" to "10".
        Suggested by Tim Peierls.
      - Improved precision of variants detection of annotated methods.
        Positive impact on WADL descriptions.
      - WadlApplication is now capable of describing more precisely
        ServerResource subclasses and not just WadlServerResource ones. 
        Request and response representation variants are described.

- 2.0 Release Candidate 4 (2010-06-01)
    - API changes
      - Changed character oriented subclasses of OutputRepresentation
        to extend WriterRepresentation instead for consistent character
        set handling.
      - StringRepresentation now derives from CharacterRepresentation.
      - WriterRepresentation now uses HTTP's default character set when
        no one is provided (ISO 8859-1).
      - Added missing ServerResource#abort() method.
        Reported by Tal Liron.
      - Deprecated the GwtShellServletWrapper as the hosted mode has 
        been removed in GWT 2.0. Reported by Rob Heittman.
      - Fixed design of the Engine class to allow custom subclasses to 
        be registered without systematically creating a new 
        EngineClassLoader. The classLoader and userClassLoader 
        properties are no longer static. A createClassLoader() method
        was added as well as a static getResource(String) : URL one. 