@@ -316,7 +316,8 @@ public class ServerConnection extends Connection<Server> {
                 addEntityHeaders(response.getEntity(), headers);
 
                 if (!response.isEntityAvailable()) {
-                    if (response.getEntity().getSize() != 0) {
+                    if ((response.getEntity() != null)
+                            && response.getEntity().getSize() != 0) {
                         getLogger()
                                 .warning(
                                         "A response with an unavailable and non empty entity was returned. Ignoring the entity for resource \""
